chore: rename product to account

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,7 +3,7 @@
     "show": "Show amounts",
     "hide": "Hide amounts"
   },
-  "my-products": "My products",
+  "my-accounts": "My products",
   "total": "Total",
   "minimum-payment": "Minimum payment",
   "pending-balance": "Funds on hold",
