--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -3,7 +3,7 @@
     "show": "Mostrar saldos",
     "hide": "Ocultar saldos"
   },
-  "my-products": "Mis productos",
+  "my-accounts": "Mis productos",
   "total": "Total",
   "minimum-payment": "Pago mínimo",
   "pending-balance": "Saldo en canje",
