refactor: remove table and create activity list

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -24,7 +24,7 @@
     "noAmount": "Enter an amount to pay",
     "withAmount": "{amount} remaining after transfer"
   },
-  "frequent-transactions": "Frequent transactions",
+  "transactions": "Transactions",
   "details": "Details",
   "frequent": {
     "date": "Date",
