chore: add greeting

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -48,5 +48,6 @@
     "actions": "Actions"
   },
   "list": "List",
-  "slides": "Slides"
+  "slides": "Slides",
+  "greeting": "Hi {value}, Welcome!"
 }
