feat: apply new dashboard design (#50)
* chore: remove all Activity definitions and components

* chore: change banner to alert

* chore: add greeting

* chore: add navs

* chore: add quick actions banner

* chore: use new components and improve design and spacings

* chore: rename components and adjust design

* chore: adjust slides

* chore: adjust categories

* fix: liquid var

* chore: remove unused exports and delete unused file

* chore: use DSelect instead InputSelect or DQuickActionButton

* chore: adjust locales

* fix: redirect url

* chore: update DF version to 1.32.0 and adjust DAvatar

* chore: adjust quick actions link

* chore: adjust quick transfer url and add invalid state for amount

* fix: hide image card on mobile modal

* chore: add success toast for activate card

* chore: remove bg-secondary-200 in loaders

* chore: rename var

* style: remove unused

* style: adjust custom hovers

* style: adjust breakpoints

* chore: update DF to 1.32.1

* chore: remove unused condition

* chore: remove useMemo without dependencies and adjust default name and locales

* chore: update and apply eslint rules

* fix: show name

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -19,7 +19,8 @@
     "createPin": "Create PIN",
     "createPinDescription": "Assign a key of 4 digits to your card for ATM withdrawals.",
     "confirmPin": "Confirm PIN",
-    "errorPin": "Incorrect PIN, try again!"
+    "errorPin": "Incorrect PIN, try again!",
+    "success": "The card has been successfully activated"
   },
   "myAccounts": "My products",
   "total": "Total",
@@ -39,7 +40,6 @@
     "noAmount": "Enter an amount to pay",
     "withAmount": "{amount} remaining after transfer"
   },
-  "transactions": "Transactions",
   "details": "Details",
   "frequent": {
     "date": "Date",
@@ -49,5 +49,16 @@
     "actions": "Actions"
   },
   "list": "List",
-  "slides": "Slides"
+  "slides": "Slides",
+  "greeting": "Hi {name}, Welcome!",
+  "actions": {
+    "moreInfo": "More Info",
+    "knowMore": "Know More"
+  },
+  "quickActions": {
+    "title": "What would you like to do today?",
+    "transfer": "Transfer",
+    "payService": "Pay Service",
+    "invest": "Invest"
+  }
 }
